# gifinator

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/lib/components/: GifGrid.svelte  GifItem.svelte  SearchBar.svelte  Settings.svelte  TitleBar.svelte
src/lib/services/: clipboard.ts  giphy.ts  hotkey.ts  store.ts
src/lib/types/: index.ts
